# IRCREPO

./: .gitignore
firmware/arduino/: cytrons.cpp  cytrons.h  pid  pid.ino
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_pkg/share/my_pkg/: package.sh
install/my_robot/share/my_robot/: package.sh  package.xml
install/my_robot/share/my_robot/config/: ekf.yaml
install/my_robot_description/lib/my_robot_description/: swerve_controller
install/my_robot_description/share/my_robot_description/: package.sh  package.xml
install/my_robot_description/share/my_robot_description/config/: controllers.yaml
install/my_robot_description/share/my_robot_description/launch/: display.launch.py
install/my_robot_description/share/my_robot_description/urdf/: mobile_base.xacro
log/: latest_build
my_pkg/: package.xml  setup.py
my_robot/: setup.py
my_robot/launch/: ekf_launch.py
my_robot_description/: package.xml  setup.py
my_robot_description/config/: controllers.yaml
my_robot_description/launch/: display.launch.py
my_robot_description/my_robot_description/: swerve_controller.py
my_robot_description/urdf/: common_properties.xacro  mobile_base.xacro  my_robot.urdf.xacro  ros2_control.xacro
