<?xml version="1.0"?>
<package format="3">
  <name>my_robot</name>
  <version>0.0.1</version>
  <description>My robot package for EKF fusion and navigation</description>
  <maintainer email="pranav@example.com">Pranav</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

